1) Convert ApplicationContextUtils into a Singleton class 2) Improve Tuples